--- a/.env-prod
+++ b/.env-prod
@@ -4,3 +4,7 @@ APP_KEYS=h46jzknDonRjGaj4pc/eRQ==,cmlU8D+tksRQ/n0fvWK7lw==,3mZV/yyEUOsgsIG2sIqK/
 API_TOKEN_SALT=jsJcsd5qqFP9f7HEGDGung==
 ADMIN_JWT_SECRET=SBHlAoS+2g6Wt+3hElPm4A==
 JWT_SECRET=Lf7vi9PvWypXWzuacZZLAA==
+DATABASE_HOST=34.101.239.188
+DATABASE_NAME=vbrushDB
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=4xe]F+H*hBC7i<8"
